--- a/lifeStyleFront/tsconfig.json
+++ b/lifeStyleFront/tsconfig.json
@@ -14,6 +14,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "types": ["vite/client"],
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
