--- a/lifeStyleBack/.gitignore
+++ b/lifeStyleBack/.gitignore
@@ -14,6 +14,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Personal Extra Code 
+junk.txt
+bin
+./bin
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
