Backend: enhanced security via replacing JWT with PASETO, restructured the folder. Frontend: added the initial skeleton Fitness module

--- a/lifeStyleFront/package.json
+++ b/lifeStyleFront/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "prod": "vite server",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0"
   },
