major changes to frontend and backend; pagination added; minor bug fixes

--- a/lifeStyleFront/.env
+++ b/lifeStyleFront/.env
@@ -1,1 +1,3 @@
-VITE_REACT_APP_BACKEND_URL = "https://lifestylebackend.fly.dev"
+VITE_REACT_APP_BACKEND_URL = http://localhost:1300
+# http://localhost:1300
+# https://lifestylebackend.fly.dev
