--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ archive
 Makefile
 az webapp log tail --name lifestylefrontend --resource-group lifestylefrontend_group
 mySqlApp
+docker-compose.yaml
