OAuth added for google sign in

--- a/lifeStyleFront/.env
+++ b/lifeStyleFront/.env
@@ -1,4 +1,4 @@
 VITE_REACT_APP_BACKEND_URL = https://backend.fitfintracker.ca
-# http://localhost:1300
-# https://lifestylebackend.fly.dev
-# https://backend.fitfintracker.ca
+# VITE_REACT_APP_BACKEND_URL = http://localhost:1300
+
+# VITE_REACT_APP_BACKEND_URL = https://lifestylebackend.fly.dev
