Added WebSocket design for OpenAI API call

--- a/lifeStyleFront/.env
+++ b/lifeStyleFront/.env
@@ -1,4 +1,8 @@
 VITE_REACT_APP_BACKEND_URL = https://backend.fitfintracker.ca
-# VITE_REACT_APP_BACKEND_URL = http://localhost:1300
+VITE_REACT_APP_WS_URL="wss://backend.fitfintracker.ca/ws"
+
+# VITE_REACT_APP_BACKEND_URL=http://localhost:1300
+# VITE_REACT_APP_WS_URL="ws://localhost:1300/ws"
 
 # VITE_REACT_APP_BACKEND_URL = https://lifestylebackend.fly.dev
+
