Improved frontend routings and navigations

--- a/lifeStyleFront/tsconfig.json
+++ b/lifeStyleFront/tsconfig.json
@@ -22,6 +22,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "../archive/SubmitExpenses.tsx"],
+  "include": ["src", "../archive/SubmitExpenses.tsx", "../archive/ShowBudgetsLoader.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
