--- a/lifeStyleBack/.github/workflows/ci.yml
+++ b/lifeStyleBack/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+
+    - name: Checkout to Actions
+      uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v4
