--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,21 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    steps:
 
+    services:
+      postgres:
+        image: postgres:16.1
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: testpassword
+          POSTGRES_DB: lifestyledb_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
     - name: Checkout to Actions
       uses: actions/checkout@v3
 
