--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,8 @@ jobs:
       with:
         go-version: '1.21.5'
 
+    - name: Go to the lifeStyleBack directory
+      run: cd lifeStyleBack
+
     - name: Test
       run: go test -v -cover ./lifeStyleBack/handlers
