--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,5 @@ jobs:
       with:
         go-version: '1.21.5'
 
-    - name: Go to the lifeStyleBack directory
-      run: cd lifeStyleBack
-
     - name: Test
-      run: go test -v -cover ./handlers
+      run: cd lifeStyleBack && go test -v -cover ./handlers
