added deployment to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,3 +40,6 @@ jobs:
     
     - name: Test
       run: cd lifeStyleBack && go test -v -cover ./handlers
+
+    - name: Deploy if tests run
+      run: cd lifeStyleBack && fly deploy 
