--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,5 @@ jobs:
     - name: Test
       run: cd lifeStyleBack && go test -v -cover ./handlers
 
-    - name: Deploy if tests run
-      run: cd lifeStyleBack && fly deploy 
+    # - name: Deploy if tests run
+    #   run: cd lifeStyleBack && fly deploy 
