--- a/lifeStyleFront/package.json
+++ b/lifeStyleFront/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.17.0",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
