--- a/lifeStyleFront/package.json
+++ b/lifeStyleFront/package.json
@@ -12,9 +12,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/canvas-confetti": "^1.6.4",
     "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.2",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
