--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ name: ci-test
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
 
 jobs:
   test:
@@ -49,5 +49,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: cd lifeStyleBack && flyctl deploy --remote-only
+      # Add a step for frontend
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
